--- a/nextjs-shop/package.json
+++ b/nextjs-shop/package.json
@@ -22,6 +22,7 @@
     "@types/jest": "^29.5.14",
     "@types/react-content-loader": "^3.1.4",
     "bcryptjs": "^3.0.2",
+    "inversify": "^7.0.0-alpha.5",
     "next": "^15.3.0",
     "next-auth": "^5.0.0-beta.25",
     "pino": "^9.6.0",
@@ -30,6 +31,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "recoil": "^0.7.7",
+    "reflect-metadata": "^0.2.2",
     "styled-components": "^6.1.14",
     "swr": "^2.3.0",
     "yup": "^1.6.1",
